<resources>
    <string name="app_name">Recognition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="permission_required">Permission Required</string>
    <string name="grant_permission">Grant permissions</string>
    <string name="location_permission_message">Message.</string>
</resources>